[tool.poetry]
name = "pi-nbiot"
version = "0.1.0"
description = "NB-IoT using waveshare HAT for Raspberry Pi"
authors = ["gbrucepayne <gbrucepayne@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.5"
gpiozero = "^1.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.6"
pytest = "^7.2.0"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
